Ignore illegal warn